# aged

./: .gitignore  Cargo.toml  Makefile  README.md  release-please-config.json
.github/workflows/: ci.yml  lint.yml  release-please.yml
debian/: changelog  control  copyright  rules
src/: age.rs  config.rs  dbus_client.rs  dbus_service.rs  error.rs  geoclue.rs  jurisdiction.rs  main.rs
src/storage/: file.rs  mod.rs  secret_service.rs
tests/data/: no_catchall.toml
